--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                               <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                             </div>
                             <div class="genre_title">만화</div>
-                            <div class="date">2020/07/27</div>
+                            <div class="date">2020/08/26</div>
                             <div class="official_tag official_article">official</div>
                           </div>
                           <div class="content_info">
@@ -132,7 +132,7 @@
                               <img src="61e7144f0d091432cdb5ef0fe4c8ab83.jpg" alt="">
                             </div>
                             <h3 class="series">【목차】동방취접화 ~ 로터스 이터들의 취성【월간 콤프에이스】</h3>
-                            <h2 class="title">제8화 술병에 입 있고 냄비에 귀 있으니 ≪전편≫</h2>
+                            <h2 class="title">제9화 술병에 입 있고 냄비에 귀 있으니 ≪중편≫</h2>
                           </div>
                         </a>
                         <a class="half_card un_official" href="ningentachinogensoukyou_ko">
@@ -247,7 +247,7 @@
                                 <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                               </div>
                               <div class="genre_title">漫画</div>
-                              <div class="date">2020/07/27</div>
+                              <div class="date">2020/08/26</div>
                               <div class="official_tag official_article">official</div>
                             </div>
                           </div>
@@ -256,7 +256,7 @@
                               <img src="61e7144f0d091432cdb5ef0fe4c8ab83.jpg" alt="">
                             </div>
                             <h3 class="series">【もくじ】東方酔蝶華　〜 ロータスイーター達の酔醒【月刊コンプエース】</h3>
-                            <h2 class="title">東方酔蝶華　〜 ロータスイーター達の酔醒　第8話　徳利に口あり鍋に耳あり　≪前編≫【月刊コンプエース】</h2>
+                            <h2 class="title">東方酔蝶華　〜 ロータスイーター達の酔醒　第9話　徳利に口あり鍋に耳あり　≪中編≫【月刊コンプエース】</h2>
                           </div>
                         </a>
                         <a class="half_card official" href="sangetsusei_s1">
@@ -266,7 +266,7 @@
                                 <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                               </div>
                               <div class="genre_title">漫画</div>
-                              <div class="date">2020/07/27</div>
+                              <div class="date">2020/08/26</div>
                               <div class="official_tag official_article">official</div>
                             </div>
                           </div>
@@ -275,7 +275,7 @@
                               <img src="4c9cc09e391f03356688db9f62066618.jpg" alt="">
                             </div>
                             <h3 class="series">【もくじ】東方三月精　〜 Strange and Bright Nature Deity.【月刊コンプエース】</h3>
-                            <h2 class="title">東方三月精　〜 Strange and Bright Nature Deity.　第8話　春の幻　後編【月刊コンプエース】</h2>
+                            <h2 class="title">東方三月精　〜 Strange and Bright Nature Deity.　第9話　有情の霧雨　前編【月刊コンプエース】</h2>
                           </div>
                         </a>
                       </div>
@@ -356,7 +356,7 @@
                                 <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                               </div>
                               <div class="genre_title">만화</div>
-                              <div class="date">2020/07/27</div>
+                              <div class="date">2020/08/26</div>
                               <div class="official_tag official_article">official</div>
                             </div>
                             <div class="content_info">
@@ -364,7 +364,7 @@
                                 <img src="61e7144f0d091432cdb5ef0fe4c8ab83.jpg" alt="">
                               </div>
                               <h3 class="series">【목차】동방취접화 ~ 로터스 이터들의 취성【월간 콤프에이스】</h3>
-                              <h2 class="title">제8화 술병에 입 있고 냄비에 귀 있으니 ≪전편≫</h2>
+                              <h2 class="title">제9화 술병에 입 있고 냄비에 귀 있으니 ≪중편≫</h2>
                             </div>
                           </a>
                           <a class="half_card un_official" href="ningentachinogensoukyou_ko">
@@ -474,7 +474,7 @@
                                   <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                                 </div>
                                 <div class="genre_title">漫画</div>
-                                <div class="date">2020/07/27</div>
+                                <div class="date">2020/08/26</div>
                                 <div class="official_tag official_article">official</div>
                               </div>
                             </div>
@@ -483,7 +483,7 @@
                                 <img src="61e7144f0d091432cdb5ef0fe4c8ab83.jpg" alt="">
                               </div>
                               <h3 class="series">【もくじ】東方酔蝶華　〜 ロータスイーター達の酔醒【月刊コンプエース】</h3>
-                              <h2 class="title">東方酔蝶華　〜 ロータスイーター達の酔醒　第8話　徳利に口あり鍋に耳あり　≪前編≫【月刊コンプエース】</h2>
+                              <h2 class="title">東方酔蝶華　〜 ロータスイーター達の酔醒　第9話　徳利に口あり鍋に耳あり　≪中編≫【月刊コンプエース】</h2>
                             </div>
                           </a>
                           <a class="half_card official" href="sangetsusei_s1">
@@ -493,7 +493,7 @@
                                   <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                                 </div>
                                 <div class="genre_title">漫画</div>
-                                <div class="date">2020/07/27</div>
+                                <div class="date">2020/08/26</div>
                                 <div class="official_tag official_article">official</div>
                               </div>
                             </div>
@@ -502,7 +502,7 @@
                                 <img src="4c9cc09e391f03356688db9f62066618.jpg" alt="">
                               </div>
                               <h3 class="series">【もくじ】東方三月精　〜 Strange and Bright Nature Deity.【月刊コンプエース】</h3>
-                              <h2 class="title">東方三月精　〜 Strange and Bright Nature Deity.　第8話　春の幻　後編【月刊コンプエース】</h2>
+                              <h2 class="title">東方三月精　〜 Strange and Bright Nature Deity.　第9話　有情の霧雨　前編【月刊コンプエース】</h2>
                             </div>
                           </a>
                         </div>
