--- a/sangetsusei_s1/index.html
+++ b/sangetsusei_s1/index.html
@@ -60,7 +60,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div class="genre_title">連載</div>
-                            <div class="date">2020/07/27</div>
+                            <div class="date">2020/08/26</div>
                             <div class="official_tag official_article">official</div>
                           </div>
                         </div>
@@ -82,10 +82,10 @@
                               <div class="title">第１話　梅雨の別荘</div>
                               <div class="date">2019/12/26</div>
                             </a>
-                            <a class="read latest" href="8">
+                            <a class="read latest" href="9">
                               <div class="label">最新話を読む</div>
-                              <div class="title">第8話　春の幻　後編</div>
-                              <div class="date">2020/07/27</div>
+                              <div class="title">第9話　有情の霧雨　前編</div>
+                              <div class="date">2020/08/26</div>
                             </a>
                           </section>
                         </div>
@@ -157,6 +157,13 @@
                             <p class="date">更新: 2020/07/27</p>
                           </div>
                         </a>
+						<a class="chapter_card" href="9">
+                          <div class="content_info">
+                            <p class="count"></p>
+                            <h3 class="title">第9話　有情の霧雨　前編</h3>
+                            <p class="date">更新: 2020/08/26</p>
+                          </div>
+                        </a>
                       </section>
                     </article>
                     <div></div>
@@ -168,7 +175,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div></div>
-                            <div class="date">2020/07/27</div>
+                            <div class="date">2020/08/26</div>
                             <div class="official_tag official_article">official</div>
                           </div>
                         </div>
