번역/식자 표기

--- a/ningentachinogensoukyou_ko/5/index.html
+++ b/ningentachinogensoukyou_ko/5/index.html
@@ -145,6 +145,8 @@
                         <img src="0019-1.jpg">
                         <img src="0020-1.jpg">
                         <img src="0021-1.jpg">
+                        <p>&nbsp;</p>
+                        <p style="text-align: right; font-size: 1.8rem;">번역/식자: 초핫</p>
                       </div>
                       <div class="credits">
                         <div></div>
