--- a/suichouka_ko/5/index.html
+++ b/suichouka_ko/5/index.html
@@ -147,6 +147,8 @@
                         <img src="suichou5_024.jpg">
                         <img src="suichou5_025.jpg">
                         <img src="suichou5_026.jpg">
+                        <p>&nbsp;</p>
+                        <p style="text-align: right; font-size: 1.8rem;">번역/식자: Cifer</p>
                       </div>
                       <div class="credits">
                         <div></div>
