--- a/touhouchireikiden_ko/ch2_03/index.html
+++ b/touhouchireikiden_ko/ch2_03/index.html
@@ -134,6 +134,8 @@
                         <img src="0015.jpg">
                         <img src="0016.jpg">
                         <img src="0017.jpg">
+                        <p>&nbsp;</p>
+                        <p style="text-align: right; font-size: 1.8rem;">번역/식자: 초핫</p>
                       </div>
                       <div class="credits">
                         <div></div>
