--- a/harapeko_ko/4/index.html
+++ b/harapeko_ko/4/index.html
@@ -130,6 +130,10 @@
                         <img src="0011.jpg">
                         <img src="0012.jpg">
                         <img src="0013.jpg">
+                        <p>&nbsp;</p>
+                        <p style="text-align: right; font-size: 1.8rem;">번역: 초핫</p>
+                        <p>&nbsp;</p>
+                        <p style="text-align: right; font-size: 1.8rem;">식자: rosenrose</p>
                       </div>
                       <div class="credits">
                         <div></div>
