--- a/ningentachinogensoukyou_ko/4/index.html
+++ b/ningentachinogensoukyou_ko/4/index.html
@@ -138,6 +138,8 @@
                         <img src="ningen_4_0019.jpg">
                         <img src="ningen_4_0020.jpg">
                         <img src="ningen_4_0021.jpg">
+                        <p>&nbsp;</p>
+                        <p style="text-align: right; font-size: 1.8rem;">번역/식자: 초핫</p>
                       </div>
                       <div class="credits">
                         <div></div>
