--- a/ningentachinogensoukyou_ko/6/index.html
+++ b/ningentachinogensoukyou_ko/6/index.html
@@ -143,6 +143,8 @@
                         <img src="ningen6_0023.jpg">
                         <img src="ningen6_0024.jpg">
                         <img src="ningen6_0025.jpg">
+                        <p>&nbsp;</p>
+                        <p style="text-align: right; font-size: 1.8rem;">번역/식자: 초핫</p>
                       </div>
                       <div class="credits">
                         <div></div>
