--- a/ningentachinogensoukyou_ko/8/index.html
+++ b/ningentachinogensoukyou_ko/8/index.html
@@ -141,6 +141,8 @@
                         <img src="0023-1.jpg">
                         <img src="0024-1.jpg">
                         <img src="0025-1.jpg">
+                        <p>&nbsp;</p>
+                        <p style="text-align: right; font-size: 1.8rem;">번역/식자: 초핫</p>
                       </div>
                       <div class="credits">
                         <div></div>
