--- a/ningentachinogensoukyou_ko/9/index.html
+++ b/ningentachinogensoukyou_ko/9/index.html
@@ -150,6 +150,8 @@
                         <img src="0029.jpg">
                         <img src="0030.jpg">
                         <img src="0031.jpg">
+                        <p>&nbsp;</p>
+                        <p style="text-align: right; font-size: 1.8rem;">번역/식자: 초핫</p>
                       </div>
                       <div class="credits">
                         <div></div>
