--- a/shinigami_ko/4/index.html
+++ b/shinigami_ko/4/index.html
@@ -141,6 +141,10 @@
                         <img src="shinigami_4_0019.jpg">
                         <img src="shinigami_4_0020.jpg">
                         <img src="shinigami_4_0021.jpg">
+                        <p>&nbsp;</p>
+                        <p style="text-align: right; font-size: 1.8rem;">번역: 초핫</p>
+                        <p>&nbsp;</p>
+                        <p style="text-align: right; font-size: 1.8rem;">식자: rosenrose</p>
                       </div>
                       <div class="credits">
                         <div></div>
