--- a/shinigami_ko/5/index.html
+++ b/shinigami_ko/5/index.html
@@ -141,6 +141,10 @@
                         <img src="0022.jpg">
                         <img src="0023.jpg">
                         <img src="0024.jpg">
+                        <p>&nbsp;</p>
+                        <p style="text-align: right; font-size: 1.8rem;">번역: 초핫</p>
+                        <p>&nbsp;</p>
+                        <p style="text-align: right; font-size: 1.8rem;">식자: rosenrose</p>
                       </div>
                       <div class="credits">
                         <div></div>
