--- a/shinigami_ko/6/index.html
+++ b/shinigami_ko/6/index.html
@@ -145,6 +145,8 @@
                         <img src="shinigami6_0025.jpg">
                         <img src="shinigami6_0026.jpg">
                         <img src="shinigami6_0027.jpg">
+                        <p>&nbsp;</p>
+                        <p style="text-align: right; font-size: 1.8rem;">번역/식자: 초핫</p>
                       </div>
                       <div class="credits">
                         <div></div>
