--- a/shinigami_ko/7/index.html
+++ b/shinigami_ko/7/index.html
@@ -160,6 +160,10 @@
                         <img src="0031.jpg">
                         <img src="0032.jpg">
                         <img src="0033.jpg">
+                        <p>&nbsp;</p>
+                        <p style="text-align: right; font-size: 1.8rem;">번역: 초핫</p>
+                        <p>&nbsp;</p>
+                        <p style="text-align: right; font-size: 1.8rem;">식자: rosenrose</p>
                       </div>
                       <div class="credits">
                         <div></div>
