--- a/suichouka_ko/1/index.html
+++ b/suichouka_ko/1/index.html
@@ -166,6 +166,8 @@ ZUN이 직접 집필하고 미즈타키가 그려내는, 술에 관련된 불가
                         <img src="044.jpg">
                         <img src="045.jpg">
                         <img src="046.jpg">
+                        <p>&nbsp;</p>
+                        <p style="text-align: right; font-size: 1.8rem;">번역/식자: Cifer</p>
                       </div>
                       <div class="credits">
                         <div></div>
