--- a/suichouka_ko/7/index.html
+++ b/suichouka_ko/7/index.html
@@ -148,6 +148,8 @@
                         <img src="026.jpg">
                         <img src="027.jpg">
                         <img src="028.jpg">
+                        <p>&nbsp;</p>
+                        <p style="text-align: right; font-size: 1.8rem;">번역/식자: Cifer</p>
                       </div>
                       <div class="credits">
                         <div></div>
