--- a/touhouchireikiden_ko/ch2_02/index.html
+++ b/touhouchireikiden_ko/ch2_02/index.html
@@ -137,6 +137,10 @@
                         <img src="0015_re.jpg">
                         <img src="0016.jpg">
                         <img src="0017.jpg">
+                        <p>&nbsp;</p>
+                        <p style="text-align: right; font-size: 1.8rem;">번역: 초핫</p>
+                        <p>&nbsp;</p>
+                        <p style="text-align: right; font-size: 1.8rem;">식자: rosenrose</p>
                       </div>
                       <div class="credits">
                         <div></div>
