--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                               <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                             </div>
                             <div class="genre_title">만화</div>
-                            <div class="date">2020/07/27</div>
+                            <div class="date">2020/08/31</div>
                             <div class="official_tag official_article">official</div>
                           </div>
                           <div class="content_info">
@@ -70,7 +70,7 @@
                               <img src="973d48628e515eecc003b1ba33eb873c.jpg" alt="">
                             </div>
                             <h3 class="series">【목차】동방지령기전 반칙탐정 사토리【동방외래위편】</h3>
-                            <h2 class="title">휴재와 단행본 발매 통지</h2>
+                            <h2 class="title">제2장 유인, 의기요요하게 꿈을 풀어내다 제4화</h2>
                           </div>
                         </a>
                         <a class="half_card un_official" href="shinigami_ko">
@@ -98,7 +98,7 @@
                                 <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                               </div>
                               <div class="genre_title">만화</div>
-                              <div class="date">2020/06/29</div>
+                              <div class="date">2020/08/31</div>
                             </div>
                           </div>
                           <div class="content_info">
@@ -106,7 +106,7 @@
                               <img src="9758428.jpg" alt="">
                             </div>
                             <h3 class="series">【목차】배고픈 마리사의 행복한 식사【동방외래위편】</h3>
-                            <h2 class="title">5번째 식사</h2>
+                            <h2 class="title">6번째 식사</h2>
                           </div>
                         </a>
                       </div>
@@ -142,7 +142,7 @@
                                 <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                               </div>
                               <div class="genre_title">만화</div>
-                              <div class="date">2020/07/27</div>
+                              <div class="date">2020/08/31</div>
                             </div>
                           </div>
                           <div class="content_info">
@@ -150,7 +150,7 @@
                               <img src="9833516.jpg" alt="">
                             </div>
                             <h3 class="series">【목차】인간들의 환상향【동방외래위편】</h3>
-                            <h2 class="title">제9화 두 개의 무한, 중간</h2>
+                            <h2 class="title">제10화 친구는 필요없어</h2>
                           </div>
                         </a>
                       </div>
@@ -168,7 +168,7 @@
                               <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                             </div>
                             <div class="genre_title">漫画</div>
-                            <div class="date">2020/07/27</div>
+                            <div class="date">2020/08/31</div>
                             <div class="official_tag official_article">official</div>
                           </div>
                           <div class="content_info">
@@ -176,7 +176,7 @@
                               <img src="973d48628e515eecc003b1ba33eb873c.jpg" alt="">
                             </div>
                             <h3 class="series">【もくじ】東方智霊奇伝　反則探偵さとり【東方外來韋編】</h3>
-                            <h2 class="title">東方智霊奇伝　反則探偵さとり　休載と単行本発売のお知らせ【東方外來韋編】</h2>
+                            <h2 class="title">東方智霊奇伝　反則探偵さとり　第二章　幽人、意気妖々に夢を説く　第四話【東方外來韋編】</h2>
                           </div>
                         </a>
                         <a class="half_card un_official" href="shinigami">
@@ -204,7 +204,7 @@
                                 <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                               </div>
                               <div class="genre_title">漫画</div>
-                              <div class="date">2020/06/29</div>
+                              <div class="date">2020/08/31</div>
                             </div>
                           </div>
                           <div class="content_info">
@@ -212,7 +212,7 @@
                               <img src="9758428.jpg" alt="">
                             </div>
                             <h3 class="series">【もくじ】はらぺこ魔理沙のしあわせごはん【東方外來韋編】</h3>
-                            <h2 class="title">はらぺこ魔理沙のしあわせごはん　5食目【東方外來韋編】</h2>
+                            <h2 class="title">はらぺこ魔理沙のしあわせごはん　6食目【東方外來韋編】</h2>
                           </div>
                         </a>
                       </div>
@@ -230,14 +230,14 @@
                               <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                             </div>
                             <div class="genre_title">漫画</div>
-                            <div class="date">2020/07/27</div>
+                            <div class="date">2020/08/31</div>
                           </div>
                           <div class="content_info">
                             <div class="top_image">
                               <img src="9833516.jpg" alt="">
                             </div>
                             <h3 class="series">【もくじ】人間たちの幻想郷【東方外來韋編】</h3>
-                            <h2 class="title">人間たちの幻想郷　第九話 二つの無限、中間。【東方外來韋編】</h2>
+                            <h2 class="title">人間たちの幻想郷　第十話 友達なんていらない【東方外來韋編】</h2>
                           </div>
                         </a>
                         <a class="half_card official" href="suichouka">
@@ -301,7 +301,7 @@
                                 <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                               </div>
                               <div class="genre_title">만화</div>
-                              <div class="date">2020/07/27</div>
+                              <div class="date">2020/08/31</div>
                               <div class="official_tag official_article">official</div>
                             </div>
                             <div class="content_info">
@@ -309,7 +309,7 @@
                                 <img src="973d48628e515eecc003b1ba33eb873c.jpg" alt="">
                               </div>
                               <h3 class="series">【목차】동방지령기전 반칙탐정 사토리【동방외래위편】</h3>
-                              <h2 class="title">휴재와 단행본 발매 통지</h2>
+                              <h2 class="title">제2장 유인, 의기요요하게 꿈을 풀어내다 제4화</h2>
                             </div>
                           </a>
                           <a class="half_card un_official" href="shinigami_ko">
@@ -337,7 +337,7 @@
                                   <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                                 </div>
                                 <div class="genre_title">만화</div>
-                                <div class="date">2020/06/29</div>
+                                <div class="date">2020/08/31</div>
                               </div>
                             </div>
                             <div class="content_info">
@@ -345,7 +345,7 @@
                                 <img src="9758428.jpg" alt="">
                               </div>
                               <h3 class="series">【목차】배고픈 마리사의 행복한 식사【동방외래위편】</h3>
-                              <h2 class="title">5번째 식사</h2>
+                              <h2 class="title">6번째 식사</h2>
                             </div>
                           </a>
                         </div>
@@ -374,7 +374,7 @@
                                   <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                                 </div>
                                 <div class="genre_title">만화</div>
-                                <div class="date">2020/07/27</div>
+                                <div class="date">2020/08/31</div>
                               </div>
                             </div>
                             <div class="content_info">
@@ -382,7 +382,7 @@
                                 <img src="9833516.jpg" alt="">
                               </div>
                               <h3 class="series">【목차】인간들의 환상향【동방외래위편】</h3>
-                              <h2 class="title">제9화 두 개의 무한, 중간</h2>
+                              <h2 class="title">제10화 친구는 필요없어</h2>
                             </div>
                           </a>
                         </div>
@@ -402,7 +402,7 @@
                                 <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                               </div>
                               <div class="genre_title">漫画</div>
-                              <div class="date">2020/07/27</div>
+                              <div class="date">2020/08/31</div>
                               <div class="official_tag official_article">official</div>
                             </div>
                             <div class="content_info">
@@ -410,7 +410,7 @@
                                 <img src="973d48628e515eecc003b1ba33eb873c.jpg" alt="">
                               </div>
                               <h3 class="series">【もくじ】東方智霊奇伝　反則探偵さとり【東方外來韋編】</h3>
-                              <h2 class="title">東方智霊奇伝　反則探偵さとり　休載と単行本発売のお知らせ【東方外來韋編】</h2>
+                              <h2 class="title">東方智霊奇伝　反則探偵さとり　第二章　幽人、意気妖々に夢を説く　第四話【東方外來韋編】</h2>
                             </div>
                           </a>
                           <a class="half_card un_official" href="shinigami">
@@ -438,7 +438,7 @@
                                   <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                                 </div>
                                 <div class="genre_title">漫画</div>
-                                <div class="date">2020/06/29</div>
+                                <div class="date">2020/08/31</div>
                               </div>
                             </div>
                             <div class="content_info">
@@ -446,7 +446,7 @@
                                 <img src="9758428.jpg" alt="">
                               </div>
                               <h3 class="series">【もくじ】はらぺこ魔理沙のしあわせごはん【東方外來韋編】</h3>
-                              <h2 class="title">はらぺこ魔理沙のしあわせごはん　5食目【東方外來韋編】</h2>
+                              <h2 class="title">はらぺこ魔理沙のしあわせごはん　6食目【東方外來韋編】</h2>
                             </div>
                           </a>
                         </div>
@@ -457,14 +457,14 @@
                                 <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                               </div>
                               <div class="genre_title">漫画</div>
-                              <div class="date">2020/07/27</div>
+                              <div class="date">2020/08/31</div>
                             </div>
                             <div class="content_info">
                               <div class="top_image">
                                 <img src="9833516.jpg" alt="">
                               </div>
                               <h3 class="series">【もくじ】人間たちの幻想郷【東方外來韋編】</h3>
-                              <h2 class="title">人間たちの幻想郷　第九話 二つの無限、中間。【東方外來韋編】</h2>
+                              <h2 class="title">人間たちの幻想郷　第十話 友達なんていらない【東方外來韋編】</h2>
                             </div>
                           </a>
                           <a class="half_card official" href="suichouka">
