--- a/ningentachinogensoukyou_ko/index.html
+++ b/ningentachinogensoukyou_ko/index.html
@@ -62,7 +62,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div class="genre_title">연재</div>
-                            <div class="date">2020/07/27</div>
+                            <div class="date">2020/08/31</div>
                           </div>
                         </div>
                       </div>
@@ -83,10 +83,10 @@
                               <div class="title">제1화 불행복하다면 손뼉을 쳐라</div>
                               <div class="date">2019/11/25</div>
                             </a>
-                            <a class="read latest" href="9">
+                            <a class="read latest" href="10">
                               <div class="label">최신화 읽기</div>
-                              <div class="title">제9화 두 개의 무한, 중간</div>
-                              <div class="date">2020/07/27</div>
+                              <div class="title">제10화 친구는 필요없어</div>
+                              <div class="date">2020/08/31</div>
                             </a>
                           </section>
                         </div>
@@ -191,6 +191,13 @@
                             <p class="date">갱신: 2020/07/27</p>
                           </div>
                         </a>
+                        <a class="chapter_card" href="10">
+                          <div class="content_info">
+                            <p class="count"></p>
+                            <h3 class="title">제10화 친구는 필요없어</h3>
+                            <p class="date">갱신: 2020/08/31</p>
+                          </div>
+                        </a>
                       </section>
                     </article>
                     <div></div>
@@ -202,7 +209,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div></div>
-                            <div class="date">2020/07/27</div>
+                            <div class="date">2020/08/31</div>
                           </div>
                         </div>
                       </div>
