--- a/touhouchireikiden/index.html
+++ b/touhouchireikiden/index.html
@@ -63,7 +63,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div class="genre_title">連載</div>
-                            <div class="date">2020/07/27</div>
+                            <div class="date">2020/08/31</div>
                             <div class="official_tag official_article">official</div>
                           </div>
                         </div>
@@ -85,10 +85,10 @@
                               <div class="title">第一話 紅魔館事件は地の底に（壱）</div>
                               <div class="date">2019/10/28</div>
                             </a>
-                            <a class="read latest" href="kokuchi">
+                            <a class="read latest" href="ch2_04">
                               <div class="label">最新話を読む</div>
-                              <div class="title">休載と単行本発売のお知らせ</div>
-                              <div class="date">2020/07/27</div>
+                              <div class="title">第二章　幽人、意気妖々に夢を説く　第四話</div>
+                              <div class="date">2020/08/31</div>
                             </a>
                           </section>
                         </div>
@@ -222,6 +222,13 @@
                             <p class="date">更新: 2020/07/27</p>
                           </div>
                         </a>
+                        <a class="chapter_card" href="ch2_04">
+                          <div class="content_info">
+                            <p class="count"></p>
+                            <h3 class="title">第二章　幽人、意気妖々に夢を説く　第四話</h3>
+                            <p class="date">更新: 2020/08/31</p>
+                          </div>
+                        </a>
                       </section>
                     </article>
                     <div></div>
@@ -233,7 +240,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div></div>
-                            <div class="date">2020/07/27</div>
+                            <div class="date">2020/08/31</div>
                             <div class="official_tag official_article">official</div>
                           </div>
                         </div>
