--- a/harapeko/index.html
+++ b/harapeko/index.html
@@ -61,7 +61,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div class="genre_title">連載</div>
-                            <div class="date">2020/06/29</div>
+                            <div class="date">2020/08/31</div>
                           </div>
                         </div>
                       </div>
@@ -82,10 +82,10 @@
                               <div class="title">1食目</div>
                               <div class="date">2019/10/28</div>
                             </a>
-                            <a class="read latest" href="5">
+                            <a class="read latest" href="6">
                               <div class="label">最新話を読む</div>
-                              <div class="title">5食目</div>
-                              <div class="date">2020/06/29</div>
+                              <div class="title">6食目</div>
+                              <div class="date">2020/08/31</div>
                             </a>
                           </section>
                         </div>
@@ -180,6 +180,13 @@
                             <p class="date">更新: 2020/06/29</p>
                           </div>
                         </a>
+                        <a class="chapter_card" href="6">
+                          <div class="content_info">
+                            <p class="count"></p>
+                            <h3 class="title">6食目</h3>
+                            <p class="date">更新: 2020/08/31</p>
+                          </div>
+                        </a>
                       </section>
                     </article>
                     <div></div>
@@ -191,7 +198,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div></div>
-                            <div class="date">2020/06/29</div>
+                            <div class="date">2020/08/31</div>
                           </div>
                         </div>
                       </div>
