--- a/ningentachinogensoukyou/index.html
+++ b/ningentachinogensoukyou/index.html
@@ -62,7 +62,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div class="genre_title">連載</div>
-                            <div class="date">2020/07/27</div>
+                            <div class="date">2020/08/31</div>
                           </div>
                         </div>
                       </div>
@@ -83,10 +83,10 @@
                               <div class="title">第一話 死合わせなら手を叩こう</div>
                               <div class="date">2019/11/25</div>
                             </a>
-                            <a class="read latest" href="9">
+                            <a class="read latest" href="10">
                               <div class="label">最新話を読む</div>
-                              <div class="title">第九話 二つの無限、中間。</div>
-                              <div class="date">2020/07/27</div>
+                              <div class="title">第十話 友達なんていらない</div>
+                              <div class="date">2020/08/31</div>
                             </a>
                           </section>
                         </div>
@@ -191,6 +191,13 @@
                             <p class="date">更新: 2020/07/27</p>
                           </div>
                         </a>
+                        <a class="chapter_card" href="10">
+                          <div class="content_info">
+                            <p class="count"></p>
+                            <h3 class="title">第十話 友達なんていらない</h3>
+                            <p class="date">更新: 2020/08/31</p>
+                          </div>
+                        </a>
                       </section>
                     </article>
                     <div></div>
@@ -202,7 +209,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div></div>
-                            <div class="date">2020/07/27</div>
+                            <div class="date">2020/08/31</div>
                           </div>
                         </div>
                       </div>
