--- a/touhouchireikiden_ko/index.html
+++ b/touhouchireikiden_ko/index.html
@@ -63,7 +63,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div class="genre_title">연재</div>
-                            <div class="date">2020/07/27</div>
+                            <div class="date">2020/08/31</div>
                             <div class="official_tag official_article">official</div>
                           </div>
                         </div>
@@ -85,10 +85,10 @@
                               <div class="title">제1화 홍마관 사건은 지저에(1)</div>
                               <div class="date">2019/10/28</div>
                             </a>
-                            <a class="read latest" href="kokuchi">
+                            <a class="read latest" href="ch2_04">
                               <div class="label">최신화 읽기</div>
-                              <div class="title">휴재와 단행본 발매 통지</div>
-                              <div class="date">2020/07/27</div>
+                              <div class="title">제2장 유인, 의기요요하게 꿈을 풀어내다 제4화</div>
+                              <div class="date">2020/08/31</div>
                             </a>
                           </section>
                         </div>
@@ -222,6 +222,13 @@
                             <p class="date">갱신: 2020/07/27</p>
                           </div>
                         </a>
+                        <a class="chapter_card" href="ch2_04">
+                          <div class="content_info">
+                            <p class="count"></p>
+                            <h3 class="title">제2장 유인, 의기요요하게 꿈을 풀어내다 제4화</h3>
+                            <p class="date">갱신: 2020/08/31</p>
+                          </div>
+                        </a>
                       </section>
                     </article>
                     <div></div>
@@ -233,7 +240,7 @@
                         <div class="info">
                           <div class="basicinfo">
                             <div></div>
-                            <div class="date">2020/07/27</div>
+                            <div class="date">2020/08/31</div>
                             <div class="official_tag official_article">official</div>
                           </div>
                         </div>
