--- a/ningentachinogensoukyou_ko/11/index.html
+++ b/ningentachinogensoukyou_ko/11/index.html
@@ -147,6 +147,8 @@
                         <img src="0025.jpg">
                         <img src="0026.jpg">
                         <img src="0027.jpg">
+                        <p> </p>
+                        <p style="text-align: right; font-size: 1.8rem;">번역/식자: 초핫</p>
                       </div>
                       <div class="credits">
                         <div></div>
