--- a/touhouchireikiden_ko/ch2_05a/index.html
+++ b/touhouchireikiden_ko/ch2_05a/index.html
@@ -130,6 +130,8 @@
                         <img src="0007.jpg">
                         <img src="0008.jpg">
                         <img src="0009.jpg">
+                        <p> </p>
+                        <p style="text-align: right; font-size: 1.8rem;">번역/식자: 초핫</p>
                       </div>
                       <div class="credits">
                         <div></div>
