--- a/suichouka_ko/10/index.html
+++ b/suichouka_ko/10/index.html
@@ -150,6 +150,8 @@
                         <img src="027.jpg">
                         <img src="028.jpg">
                         <img src="029.jpg">
+                        <p> </p>
+                        <p style="text-align: right; font-size: 1.8rem;">번역/식자: Cifer</p>
                       </div>
                       <div class="credits">
                         <div></div>
