--- a/index.html
+++ b/index.html
@@ -223,32 +223,14 @@
                     </div>
                     <div>
                       <div class="list_card">
-                        <a class="full_card un_official" href="ningentachinogensoukyou">
+                        <a class="full_card official" href="suichouka">
                           <div class="card_header false">
                             <div class="icon">
                               <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                             </div>
                             <div class="genre_title">漫画</div>
                             <div class="date">2020/10/26</div>
-                          </div>
-                          <div class="content_info">
-                            <div class="top_image">
-                              <img src="9833516.jpg" alt="">
-                            </div>
-                            <h3 class="series">【もくじ】人間たちの幻想郷【東方外來韋編】</h3>
-                            <h2 class="title">人間たちの幻想郷　第十二話 巻帙の夢 前編【東方外來韋編】</h2>
-                          </div>
-                        </a>
-                        <a class="half_card official" href="suichouka">
-                          <div class="card_header_half card_header_half_official">
-                            <div class="container">
-                              <div class="icon">
-                                <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
-                              </div>
-                              <div class="genre_title">漫画</div>
-                              <div class="date">2020/10/26</div>
                               <div class="official_tag official_article">official</div>
-                            </div>
                           </div>
                           <div class="content_info">
                             <div class="top_image">
@@ -275,6 +257,24 @@
                             </div>
                             <h3 class="series">【もくじ】東方三月精　〜 Strange and Bright Nature Deity.【月刊コンプエース】</h3>
                             <h2 class="title">東方三月精　〜 Strange and Bright Nature Deity.　第11話　玄武の沢　前編【月刊コンプエース】</h2>
+                          </div>
+                        </a>
+                        <a class="half_card un_official" href="ningentachinogensoukyou">
+                          <div class="card_header_half false">
+                            <div class="container">
+                              <div class="icon">
+                                <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
+                              </div>
+                              <div class="genre_title">漫画</div>
+                              <div class="date">2020/10/26</div>
+                            </div>
+                          </div>
+                          <div class="content_info">
+                            <div class="top_image">
+                              <img src="9833516.jpg" alt="">
+                            </div>
+                            <h3 class="series">【もくじ】人間たちの幻想郷【東方外來韋編】</h3>
+                            <h2 class="title">人間たちの幻想郷　第十二話 巻帙の夢 前編【東方外來韋編】</h2>
                           </div>
                         </a>
                       </div>
@@ -450,32 +450,14 @@
                           </a>
                         </div>
                         <div class="list_card">
-                          <a class="full_card un_official" href="ningentachinogensoukyou">
-                            <div class="card_header false">
+                          <a class="full_card official" href="suichouka">
+                            <div class="card_header card_header_official">
                               <div class="icon">
                                 <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
                               </div>
                               <div class="genre_title">漫画</div>
                               <div class="date">2020/10/26</div>
-                            </div>
-                            <div class="content_info">
-                              <div class="top_image">
-                                <img src="9833516.jpg" alt="">
-                              </div>
-                              <h3 class="series">【もくじ】人間たちの幻想郷【東方外來韋編】</h3>
-                              <h2 class="title">人間たちの幻想郷　第十二話 巻帙の夢 前編【東方外來韋編】</h2>
-                            </div>
-                          </a>
-                          <a class="half_card official" href="suichouka">
-                            <div class="card_header_half card_header_half_official">
-                              <div class="container">
-                                <div class="icon">
-                                  <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
-                                </div>
-                                <div class="genre_title">漫画</div>
-                                <div class="date">2020/10/26</div>
-                                <div class="official_tag official_article">official</div>
-                              </div>
+                              <div class="official_tag official_article">official</div>
                             </div>
                             <div class="content_info">
                               <div class="top_image">
@@ -502,6 +484,24 @@
                               </div>
                               <h3 class="series">【もくじ】東方三月精　〜 Strange and Bright Nature Deity.【月刊コンプエース】</h3>
                               <h2 class="title">東方三月精　〜 Strange and Bright Nature Deity.　第11話　玄武の沢　前編【月刊コンプエース】</h2>
+                            </div>
+                          </a>
+                          <a class="half_card un_official" href="ningentachinogensoukyou">
+                            <div class="card_header_half false">
+                              <div class="container">
+                                <div class="icon">
+                                  <img src="/saoow.github.io/icon_menu_comic-1.0.0.png">
+                                </div>
+                                <div class="genre_title">漫画</div>
+                                <div class="date">2020/10/26</div>
+                              </div>
+                            </div>
+                            <div class="content_info">
+                              <div class="top_image">
+                                <img src="9833516.jpg" alt="">
+                              </div>
+                              <h3 class="series">【もくじ】人間たちの幻想郷【東方外來韋編】</h3>
+                              <h2 class="title">人間たちの幻想郷　第十二話 巻帙の夢 前編【東方外來韋編】</h2>
                             </div>
                           </a>
                         </div>
