--- a/touhouchireikiden/index.html
+++ b/touhouchireikiden/index.html
@@ -229,7 +229,7 @@
                         <a class="chapter_card" href="ch2_05a">
                           <div class="content_info">
                             <p class="count"></p>
-                            <h3 class="title">第二章　幽人、意気妖々に夢を説く　第五話（前）</h3>
+                            <h3 class="title">第二章　幽人、意気妖々に夢を説く　第五話（前編）</h3>
                             <p class="date">更新: 2020/09/28</p>
                           </div>
                         </a>
