--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         </a>
                       </div>
                       <div class="banner">
-                        <a target="_blank" rel="noopener">
+                        <a href="https://www.mildom.com/profile/10922924" target="_blank" rel="noopener">
                           <img src="/saoow.github.io/banner-1.png" alt="正体不明のスポンサーX">
                         </a>
                       </div>
@@ -154,7 +154,7 @@
                         </a>
                       </div>
                       <div class="banner">
-                        <a target="_blank" rel="noopener">
+                        <a href="https://www.mildom.com/profile/10922924" target="_blank" rel="noopener">
                           <img src="/saoow.github.io/banner-1.png" alt="正体不明のスポンサーX">
                         </a>
                       </div>
@@ -216,7 +216,7 @@
                         </a>
                       </div>
                       <div class="banner">
-                        <a target="_blank" rel="noopener">
+                        <a href="https://www.mildom.com/profile/10922924" target="_blank" rel="noopener">
                           <img src="/saoow.github.io/banner-1.png" alt="正体不明のスポンサーX">
                         </a>
                       </div>
@@ -279,7 +279,7 @@
                         </a>
                       </div>
                       <div class="banner">
-                        <a target="_blank" rel="noopener">
+                        <a href="https://www.mildom.com/profile/10922924" target="_blank" rel="noopener">
                           <img src="/saoow.github.io/banner-1.png" alt="正体不明のスポンサーX">
                         </a>
                       </div>
@@ -387,7 +387,7 @@
                         </div>
                       </div>
                       <div class="banner">
-                        <a target="_blank" rel="noopener">
+                        <a href="https://www.mildom.com/profile/10922924" target="_blank" rel="noopener">
                           <img src="/saoow.github.io/banner-1.png" alt="正体不明のスポンサーX">
                         </a>
                       </div>
@@ -507,7 +507,7 @@
                         </div>
                       </div>
                       <div class="banner">
-                        <a target="_blank" rel="noopener">
+                        <a href="https://www.mildom.com/profile/10922924" target="_blank" rel="noopener">
                           <img src="/saoow.github.io/banner-1.png" alt="正体不明のスポンサーX">
                         </a>
                       </div>
