--- a/suichouka_ko/1/index.html
+++ b/suichouka_ko/1/index.html
@@ -261,7 +261,7 @@ ZUN이 직접 집필하고 미즈타키가 그려내는, 술에 관련된 불가
                       </div>
                     </div>
                     <div class="banner">
-                      <a target="_blank" rel="noopener">
+                      <a href="https://www.mildom.com/profile/10922924" target="_blank" rel="noopener">
                         <img src="/saoow.github.io/banner-1.png" alt="正体不明のスポンサーX">
                       </a>
                     </div>
