--- a/touhouchireikiden_ko/2/index.html
+++ b/touhouchireikiden_ko/2/index.html
@@ -236,7 +236,7 @@
                       </div>
                     </div>
                     <div class="banner">
-                      <a target="_blank" rel="noopener">
+                      <a href="https://www.mildom.com/profile/10922924" target="_blank" rel="noopener">
                         <img src="/saoow.github.io/banner-1.png" alt="正体不明のスポンサーX">
                       </a>
                     </div>
